<?xml version="1.0" encoding="UTF-8"?>
<!--
  Copyright 2025 Kaur Palang
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.openintegrationengine</groupId>
    <artifactId>tlsmanager</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <modules>
        <module>server</module>
        <module>shared</module>
        <module>client</module>
    </modules>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <mirth.version>4.5.2</mirth.version>

        <maven-processor-plugin.version>5.1</maven-processor-plugin.version>
        <maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
        <maven-jarsigner-plugin.version>3.0.0</maven-jarsigner-plugin.version>
        <mirth-plugin-maven-plugin.version>2.1.0-SNAPSHOT</mirth-plugin-maven-plugin.version>
        <lombok.version>1.18.32</lombok.version>
        <slf4j.version>1.7.30</slf4j.version>
        <miglayout.version>3.7.4</miglayout.version>
        <junit.version>5.13.4</junit.version>
        <mockito.version>5.19.0</mockito.version>

        <!-- Plugin details -->
        <mirth.plugin.author>OpenIntegrationEngine</mirth.plugin.author>
        <mirth.plugin.compatible_versions>4.5.2</mirth.plugin.compatible_versions>
        <mirth.plugin.description>TLS Management made easy</mirth.plugin.description>
        <mirth.plugin.name>TLS Manager</mirth.plugin.name>
        <mirth.plugin.path>tls-manager</mirth.plugin.path>
        <mirth.plugin.url>https://openintegrationengine.com</mirth.plugin.url>
        <mirth.plugin.version>${project.version}</mirth.plugin.version>
    </properties>

    <repositories>
        <repository>
            <id>repsy-default</id>
            <url>https://repo.repsy.io/mvn/kpalang/default</url>
        </repository>
        <repository>
            <id>repsy-mirthconnect</id>
            <url>https://repo.repsy.io/mvn/kpalang/mirthconnect</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>repsy-default</id>
            <url>https://repo.repsy.io/mvn/kpalang/default</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>
        <!-- Helper plugin to handle Mirth plugin specific tasks. -->
        <dependency>
            <groupId>com.kaurpalang</groupId>
            <artifactId>mirth-plugin-maven-plugin</artifactId>
            <version>${mirth-plugin-maven-plugin.version}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <!-- Specify naming pattern for submodules. For example pluginname-client.jar -->
        <finalName>${project.parent.artifactId}-${project.artifactId}</finalName>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jarsigner-plugin</artifactId>
                <version>${maven-jarsigner-plugin.version}</version>
                <executions>
                    <execution>
                        <id>sign</id>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <keystore>${project.parent.basedir}/certificate/keystore.jks</keystore>
                    <alias>selfsigned</alias>
                    <storepass>storepass</storepass>
                    <keypass>keypass</keypass>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.bsc.maven</groupId>
                <artifactId>maven-processor-plugin</artifactId>
                <version>${maven-processor-plugin.version}</version>
                <executions>
                    <execution>
                        <id>process</id>
                        <goals>
                            <goal>process</goal>
                        </goals>
                        <phase>process-sources</phase>

                        <configuration>
                            <processors>
                                <processor>com.kaurpalang.mirth.annotationsplugin.processor.MirthPluginProcessor</processor>
                            </processors>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
